--- a/src/main/resources/com/projects/hospitalmanagementsystem/AdminLoginPage.fxml
+++ b/src/main/resources/com/projects/hospitalmanagementsystem/AdminLoginPage.fxml
@@ -17,7 +17,7 @@
    <children>
       <AnchorPane fx:id="main_form" prefHeight="200.0" prefWidth="200.0">
          <children>
-            <AnchorPane fx:id="login_form" layoutX="48.0" layoutY="75.0" prefHeight="550.0" prefWidth="330.0" styleClass="white-bg" stylesheets="@../design/PageDesign.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <AnchorPane fx:id="login_form" layoutX="48.0" layoutY="75.0" prefHeight="550.0" prefWidth="330.0" styleClass="white-bg" stylesheets="@../design/LoginPageDesign.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <children>
                   <FontAwesomeIcon fill="#188ba7" glyphName="USER" layoutX="141.0" layoutY="91.0" size="5em" />
                   <Label layoutX="102.0" layoutY="100.0" text="Login Account" textFill="#188ba7">
@@ -26,33 +26,33 @@
                      </font>
                   </Label>
                   <Label layoutX="130.0" layoutY="125.0" text="Admin Portal" />
-                  <TextField fx:id="login_username" layoutX="39.0" layoutY="177.0" onAction="#loginAccount" prefHeight="30.0" prefWidth="250.0" promptText="Username" stylesheets="@../design/PageDesign.css">
+                  <TextField fx:id="login_username" layoutX="39.0" layoutY="177.0" onAction="#loginAccount" prefHeight="30.0" prefWidth="250.0" promptText="Username" stylesheets="@../design/LoginPageDesign.css">
                      <styleClass>
                         <String fx:value="textfield-1" />
                         <String fx:value="white-bg" />
                      </styleClass>
                   </TextField>
-                  <PasswordField fx:id="login_password" layoutX="39.0" layoutY="213.0" onAction="#loginAccount" prefHeight="30.0" prefWidth="250.0" promptText="Password" stylesheets="@../design/PageDesign.css">
+                  <PasswordField fx:id="login_password" layoutX="39.0" layoutY="213.0" onAction="#loginAccount" prefHeight="30.0" prefWidth="250.0" promptText="Password" stylesheets="@../design/LoginPageDesign.css">
                      <styleClass>
                         <String fx:value="textfield-1" />
                         <String fx:value="white-bg" />
                      </styleClass>
                   </PasswordField>
-                  <TextField fx:id="login_showPassword" layoutX="39.0" layoutY="213.0" prefHeight="30.0" prefWidth="250.0" promptText="Password" stylesheets="@../design/PageDesign.css" visible="false">
+                  <TextField fx:id="login_showPassword" layoutX="39.0" layoutY="213.0" prefHeight="30.0" prefWidth="250.0" promptText="Password" stylesheets="@../design/LoginPageDesign.css" visible="false">
                      <styleClass>
                         <String fx:value="textfield-1" />
                         <String fx:value="white-bg" />
                      </styleClass>
                   </TextField>
                   <CheckBox fx:id="login_checkBox" layoutX="39.0" layoutY="249.0" mnemonicParsing="false" onAction="#loginShowPassword" text="Show Password" />
-                  <Button fx:id="login_loginBtn" layoutX="40.0" layoutY="275.0" mnemonicParsing="false" onAction="#loginAccount" prefHeight="40.0" prefWidth="250.0" stylesheets="@../design/PageDesign.css" text="Login">
+                  <Button fx:id="login_loginBtn" layoutX="40.0" layoutY="275.0" mnemonicParsing="false" onAction="#loginAccount" prefHeight="40.0" prefWidth="250.0" stylesheets="@../design/LoginPageDesign.css" text="Login">
                      <styleClass>
                         <String fx:value="btn-1" />
                         <String fx:value="radius" />
                      </styleClass>
                   </Button>
                   <FontAwesomeIcon fill="#188ba7" glyphName="HOSPITAL_ALT" layoutX="136.0" layoutY="435.0" size="6em" />
-                  <ComboBox fx:id="login_user" layoutX="90.0" layoutY="465.0" onAction="#switchPage" prefHeight="30.0" prefWidth="150.0" promptText="Select User" stylesheets="@../design/PageDesign.css">
+                  <ComboBox fx:id="login_user" layoutX="90.0" layoutY="465.0" onAction="#switchPage" prefHeight="30.0" prefWidth="150.0" promptText="Select User" stylesheets="@../design/LoginPageDesign.css">
                      <styleClass>
                         <String fx:value="textfield-1" />
                         <String fx:value="white-bg" />
@@ -62,7 +62,7 @@
                   <Hyperlink fx:id="login_registerHere" layoutX="184.0" layoutY="513.0" onAction="#switchForm" text="Register here" />
                </children>
             </AnchorPane>
-            <AnchorPane fx:id="register_form" layoutX="10.0" layoutY="10.0" prefHeight="550.0" prefWidth="330.0" styleClass="white-bg" stylesheets="@../design/PageDesign.css" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <AnchorPane fx:id="register_form" layoutX="10.0" layoutY="10.0" prefHeight="550.0" prefWidth="330.0" styleClass="white-bg" stylesheets="@../design/LoginPageDesign.css" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <children>
                   <FontAwesomeIcon fill="#188ba7" glyphName="USER_PLUS" layoutX="131.0" layoutY="90.0" size="5em" />
                   <Label layoutX="90.0" layoutY="99.0" text="Register Account" textFill="#188ba7">
@@ -71,32 +71,32 @@
                      </font>
                   </Label>
                   <Label layoutX="130.0" layoutY="125.0" text="Admin Portal" />
-                  <TextField fx:id="register_email" layoutX="39.0" layoutY="190.0" prefHeight="30.0" prefWidth="250.0" promptText="Email Address" stylesheets="@../design/PageDesign.css">
+                  <TextField fx:id="register_email" layoutX="39.0" layoutY="190.0" prefHeight="30.0" prefWidth="250.0" promptText="Email Address" stylesheets="@../design/LoginPageDesign.css">
                      <styleClass>
                         <String fx:value="textfield-1" />
                         <String fx:value="white-bg" />
                      </styleClass>
                   </TextField>
-                  <TextField fx:id="register_username" layoutX="40.0" layoutY="227.0" prefHeight="30.0" prefWidth="250.0" promptText="Username" stylesheets="@../design/PageDesign.css">
+                  <TextField fx:id="register_username" layoutX="40.0" layoutY="227.0" prefHeight="30.0" prefWidth="250.0" promptText="Username" stylesheets="@../design/LoginPageDesign.css">
                      <styleClass>
                         <String fx:value="textfield-1" />
                         <String fx:value="white-bg" />
                      </styleClass>
                   </TextField>
-                  <PasswordField fx:id="register_password" layoutX="40.0" layoutY="263.0" prefHeight="30.0" prefWidth="250.0" promptText="Password" stylesheets="@../design/PageDesign.css">
+                  <PasswordField fx:id="register_password" layoutX="40.0" layoutY="263.0" prefHeight="30.0" prefWidth="250.0" promptText="Password" stylesheets="@../design/LoginPageDesign.css">
                      <styleClass>
                         <String fx:value="textfield-1" />
                         <String fx:value="white-bg" />
                      </styleClass>
                   </PasswordField>
-                  <TextField fx:id="register_showPassword" layoutX="40.0" layoutY="263.0" prefHeight="30.0" prefWidth="250.0" promptText="Password" stylesheets="@../design/PageDesign.css" visible="false">
+                  <TextField fx:id="register_showPassword" layoutX="40.0" layoutY="263.0" prefHeight="30.0" prefWidth="250.0" promptText="Password" stylesheets="@../design/LoginPageDesign.css" visible="false">
                      <styleClass>
                         <String fx:value="textfield-1" />
                         <String fx:value="white-bg" />
                      </styleClass>
                   </TextField>
                   <CheckBox fx:id="register_checkBox" layoutX="40.0" layoutY="299.0" mnemonicParsing="false" onAction="#registerShowPassword" text="Show Password" />
-                  <Button fx:id="register_signupBtn" layoutX="41.0" layoutY="325.0" mnemonicParsing="false" onAction="#registerAccount" prefHeight="40.0" prefWidth="250.0" stylesheets="@../design/PageDesign.css" text="Sign Up">
+                  <Button fx:id="register_signupBtn" layoutX="41.0" layoutY="325.0" mnemonicParsing="false" onAction="#registerAccount" prefHeight="40.0" prefWidth="250.0" stylesheets="@../design/LoginPageDesign.css" text="Sign Up">
                      <styleClass>
                         <String fx:value="btn-1" />
                         <String fx:value="radius" />
