Implemented Functionality in Doctor Dashboard and Admin Dashboard

--- a/src/main/resources/com/projects/hospitalmanagementsystem/DoctorLoginPage.fxml
+++ b/src/main/resources/com/projects/hospitalmanagementsystem/DoctorLoginPage.fxml
@@ -62,7 +62,7 @@
                         <Hyperlink fx:id="login_registerHere" layoutX="184.0" layoutY="513.0" onAction="#switchForm" text="Register here" />
                     </children>
                 </AnchorPane>
-                <AnchorPane fx:id="register_form" layoutX="10.0" layoutY="10.0" prefHeight="550.0" prefWidth="330.0" styleClass="white-bg" stylesheets="@../design/LoginPageDesign.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                <AnchorPane fx:id="register_form" layoutX="10.0" layoutY="10.0" prefHeight="550.0" prefWidth="330.0" styleClass="white-bg" stylesheets="@../design/LoginPageDesign.css" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <children>
                         <FontAwesomeIcon fill="#67289d" glyphName="USER_PLUS" layoutX="131.0" layoutY="90.0" size="5em" />
                         <Label layoutX="90.0" layoutY="99.0" text="Register Account" textFill="#67289d">
