--- a/src/main/resources/com/projects/hospitalmanagementsystem/DoctorLoginPage.fxml
+++ b/src/main/resources/com/projects/hospitalmanagementsystem/DoctorLoginPage.fxml
@@ -17,7 +17,7 @@
     <children>
         <AnchorPane fx:id="main_form" prefHeight="200.0" prefWidth="200.0">
             <children>
-                <AnchorPane fx:id="login_form" layoutX="48.0" layoutY="75.0" prefHeight="550.0" prefWidth="330.0" styleClass="white-bg" stylesheets="@../design/LoginPageDesign.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                <AnchorPane fx:id="login_form" layoutX="48.0" layoutY="75.0" prefHeight="550.0" prefWidth="330.0" styleClass="white-bg" stylesheets="@../design/PatientColorPalettes.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <children>
                         <FontAwesomeIcon fill="#67289d" glyphName="USER_MD" layoutX="141.0" layoutY="91.0" size="5em" />
                         <Label layoutX="102.0" layoutY="100.0" text="Login Account" textFill="#67289d">
@@ -26,33 +26,33 @@
                             </font>
                         </Label>
                         <Label layoutX="129.0" layoutY="125.0" text="Doctor Portal" />
-                        <TextField fx:id="login_doctorID" layoutX="39.0" layoutY="177.0" onAction="#loginAccount" prefHeight="30.0" prefWidth="250.0" promptText="Doctor ID" stylesheets="@../design/LoginPageDesign.css">
+                        <TextField fx:id="login_doctorID" layoutX="39.0" layoutY="177.0" onAction="#loginAccount" prefHeight="30.0" prefWidth="250.0" promptText="Doctor ID" stylesheets="@../design/PatientColorPalettes.css">
                             <styleClass>
                                 <String fx:value="textfield-2" />
                                 <String fx:value="white-bg" />
                             </styleClass>
                         </TextField>
-                        <PasswordField fx:id="login_password" layoutX="39.0" layoutY="213.0" onAction="#loginAccount" prefHeight="30.0" prefWidth="250.0" promptText="Password" stylesheets="@../design/LoginPageDesign.css">
+                        <PasswordField fx:id="login_password" layoutX="39.0" layoutY="213.0" onAction="#loginAccount" prefHeight="30.0" prefWidth="250.0" promptText="Password" stylesheets="@../design/PatientColorPalettes.css">
                             <styleClass>
                                 <String fx:value="textfield-2" />
                                 <String fx:value="white-bg" />
                             </styleClass>
                         </PasswordField>
-                        <TextField fx:id="login_showPassword" layoutX="39.0" layoutY="213.0" prefHeight="30.0" prefWidth="250.0" promptText="Password" stylesheets="@../design/LoginPageDesign.css" visible="false">
+                        <TextField fx:id="login_showPassword" layoutX="39.0" layoutY="213.0" prefHeight="30.0" prefWidth="250.0" promptText="Password" stylesheets="@../design/PatientColorPalettes.css" visible="false">
                             <styleClass>
                                 <String fx:value="textfield-1" />
                                 <String fx:value="white-bg" />
                             </styleClass>
                         </TextField>
                         <CheckBox fx:id="login_checkBox" layoutX="39.0" layoutY="249.0" mnemonicParsing="false" onAction="#loginShowPassword" text="Show Password" />
-                        <Button fx:id="login_loginBtn" layoutX="40.0" layoutY="275.0" mnemonicParsing="false" onAction="#loginAccount" prefHeight="40.0" prefWidth="250.0" stylesheets="@../design/LoginPageDesign.css" text="Login">
+                        <Button fx:id="login_loginBtn" layoutX="40.0" layoutY="275.0" mnemonicParsing="false" onAction="#loginAccount" prefHeight="40.0" prefWidth="250.0" stylesheets="@../design/PatientColorPalettes.css" text="Login">
                             <styleClass>
                                 <String fx:value="btn-2" />
                                 <String fx:value="radius" />
                             </styleClass>
                         </Button>
                         <FontAwesomeIcon fill="#67289d" glyphName="HOSPITAL_ALT" layoutX="136.0" layoutY="435.0" size="6em" />
-                        <ComboBox fx:id="login_user" layoutX="90.0" layoutY="465.0" onAction="#switchPage" prefHeight="30.0" prefWidth="150.0" promptText="Select User" stylesheets="@../design/LoginPageDesign.css">
+                        <ComboBox fx:id="login_user" layoutX="90.0" layoutY="465.0" onAction="#switchPage" prefHeight="30.0" prefWidth="150.0" promptText="Select User" stylesheets="@../design/PatientColorPalettes.css">
                             <styleClass>
                                 <String fx:value="textfield-2" />
                                 <String fx:value="white-bg" />
@@ -62,7 +62,7 @@
                         <Hyperlink fx:id="login_registerHere" layoutX="184.0" layoutY="513.0" onAction="#switchForm" text="Register here" />
                     </children>
                 </AnchorPane>
-                <AnchorPane fx:id="register_form" layoutX="10.0" layoutY="10.0" prefHeight="550.0" prefWidth="330.0" styleClass="white-bg" stylesheets="@../design/LoginPageDesign.css" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                <AnchorPane fx:id="register_form" layoutX="10.0" layoutY="10.0" prefHeight="550.0" prefWidth="330.0" styleClass="white-bg" stylesheets="@../design/PatientColorPalettes.css" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <children>
                         <FontAwesomeIcon fill="#67289d" glyphName="USER_PLUS" layoutX="131.0" layoutY="90.0" size="5em" />
                         <Label layoutX="90.0" layoutY="99.0" text="Register Account" textFill="#67289d">
@@ -71,38 +71,38 @@
                             </font>
                         </Label>
                         <Label layoutX="129.0" layoutY="124.0" text="Doctor Portal" />
-                        <TextField fx:id="register_fullName" layoutX="39.0" layoutY="172.0" prefHeight="30.0" prefWidth="250.0" promptText="Full Name" stylesheets="@../design/LoginPageDesign.css">
+                        <TextField fx:id="register_fullName" layoutX="39.0" layoutY="172.0" prefHeight="30.0" prefWidth="250.0" promptText="Full Name" stylesheets="@../design/PatientColorPalettes.css">
                             <styleClass>
                                 <String fx:value="textfield-2" />
                                 <String fx:value="white-bg" />
                             </styleClass>
                         </TextField>
-                        <TextField fx:id="register_email" layoutX="39.0" layoutY="209.0" prefHeight="30.0" prefWidth="250.0" promptText="Email Address" stylesheets="@../design/LoginPageDesign.css">
+                        <TextField fx:id="register_email" layoutX="39.0" layoutY="209.0" prefHeight="30.0" prefWidth="250.0" promptText="Email Address" stylesheets="@../design/PatientColorPalettes.css">
                             <styleClass>
                                 <String fx:value="textfield-2" />
                                 <String fx:value="white-bg" />
                             </styleClass>
                         </TextField>
-                        <TextField fx:id="register_doctorID" layoutX="40.0" layoutY="246.0" prefHeight="30.0" prefWidth="250.0" promptText="Doctor ID" stylesheets="@../design/LoginPageDesign.css">
+                        <TextField fx:id="register_doctorID" layoutX="40.0" layoutY="246.0" prefHeight="30.0" prefWidth="250.0" promptText="Doctor ID" stylesheets="@../design/PatientColorPalettes.css">
                             <styleClass>
                                 <String fx:value="textfield-2" />
                                 <String fx:value="white-bg" />
                             </styleClass>
                         </TextField>
-                        <PasswordField fx:id="register_password" layoutX="40.0" layoutY="282.0" prefHeight="30.0" prefWidth="250.0" promptText="Password" stylesheets="@../design/LoginPageDesign.css">
+                        <PasswordField fx:id="register_password" layoutX="40.0" layoutY="282.0" prefHeight="30.0" prefWidth="250.0" promptText="Password" stylesheets="@../design/PatientColorPalettes.css">
                             <styleClass>
                                 <String fx:value="textfield-2" />
                                 <String fx:value="white-bg" />
                             </styleClass>
                         </PasswordField>
-                        <TextField fx:id="register_showPassword" layoutX="41.0" layoutY="282.0" prefHeight="30.0" prefWidth="250.0" promptText="Password" stylesheets="@../design/LoginPageDesign.css" visible="false">
+                        <TextField fx:id="register_showPassword" layoutX="41.0" layoutY="282.0" prefHeight="30.0" prefWidth="250.0" promptText="Password" stylesheets="@../design/PatientColorPalettes.css" visible="false">
                             <styleClass>
                                 <String fx:value="textfield-1" />
                                 <String fx:value="white-bg" />
                             </styleClass>
                         </TextField>
                         <CheckBox fx:id="register_checkBox" layoutX="40.0" layoutY="318.0" mnemonicParsing="false" onAction="#registerShowPassword" text="Show Password" />
-                        <Button fx:id="register_signupBtn" layoutX="41.0" layoutY="344.0" mnemonicParsing="false" onAction="#registerAccount" prefHeight="40.0" prefWidth="250.0" stylesheets="@../design/LoginPageDesign.css" text="Sign Up">
+                        <Button fx:id="register_signupBtn" layoutX="41.0" layoutY="344.0" mnemonicParsing="false" onAction="#registerAccount" prefHeight="40.0" prefWidth="250.0" stylesheets="@../design/PatientColorPalettes.css" text="Sign Up">
                             <styleClass>
                                 <String fx:value="btn-2" />
                                 <String fx:value="radius" />
